<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arnarfreyr.dicegame3000.OverlayRound">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3000000">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/wScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_rounds"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtScoreDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wScoreTitle"
                android:layout_marginTop="5dp"
                android:text="@string/txt_you_scored"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_below="@id/txtScoreDesc"
                android:text="@string/txt_score"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wTotalScoreLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wScore"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_points"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center" />

            <Button
                android:id="@+id/wBtnNext"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wTotalScoreLbl"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_18dp"
                android:text="@string/txt_next_round"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
